--- a/react-app-pet/src/components/CadastroPet/cadastro.css
+++ b/react-app-pet/src/components/CadastroPet/cadastro.css
@@ -1,31 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;700&display=swap');
+
 .form-cadastro-pet{
     display: flex;
     width: 100vw;
-    height: 500px;
+    height: 100vh;
     /*BackGround */
 
     background-color: black;
    
 }
-
-.text-pet{
+.text-pet {
+    position: relative;
+    position: relative;
+    overflow: hidden;
     width: 70%;
-    background: url(./img/pet-bg2.jpg) no-repeat;
-    background-size: cover;
-    background-position-y: 65%;
-   opacity: 50%;
 }
-.text-pet div {
+.text-pet img{
     width: 100%;
     height: 100%;
-    display: grid;
-    place-items: center;
+    position: absolute;
+    opacity: 70%;
+    object-fit: cover;
+}
+.text-pet div {
+    position: relative;
+    width: 100%;
+    height: 85%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    color: #fff;
 }
 .text-pet div h2 {
-    color: #fff;
-    font-size: 40px;
+    font-size: 50px;
 }
 
+
 .btn{
+    font-family: 'Roboto Condensed', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 10px;
 }
