--- a/react-app-pet/src/components/CadastroPet/cadastro.css
+++ b/react-app-pet/src/components/CadastroPet/cadastro.css
@@ -11,15 +11,14 @@
 }
 .text-pet {
     position: relative;
-    position: relative;
     overflow: hidden;
-    width: 70%;
+    width: 100%;
 }
 .text-pet img{
     width: 100%;
     height: 100%;
     position: absolute;
-    opacity: 70%;
+    
     object-fit: cover;
 }
 .text-pet div {
@@ -46,27 +45,26 @@
     margin-top: 10px;
 }
 
-.details-page{
-    background-color: #fff;
-    border: 2px solid #ddd;
-    font-family: 'Roboto Condensed', sans-serif;
-    color: #000;
-    padding: 5px;
+
+
+#obs {
     width: 100%;
-    height: 53px;
-    display: flex;
-    align-items:center;
-    justify-content:center;
-    text-align:center;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 4px;
-    text-decoration: none;
+    height: 100px;
 }
 
-.details-page:hover{
-    cursor:pointer;
-    transition: all ease-in-out 150ms;
-    background-color: #ddd;
-    color: #fff;
+@media (max-width:912px) {
+    .form-cadastro-pet{
+        display: block;
+        font-size: 1.7rem;
+    }
+
+    .form-pet h3{
+        font-size: 2rem;
+    }
+    .text-pet {
+        height: 700px;
+        object-fit: cover;
+        width: 100%;
+    }
 }
+
