estilo adicionado ao card exemplo.

--- a/cards-modelos/style.css
+++ b/cards-modelos/style.css
@@ -1,1 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+body{
+    background-color: black;
+    height: 95vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap
+}
+
+.cartaopet{
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    margin: 10px;
+    min-width: 250px;
+    max-width: 310px;
+    width: 100%;
+    color: #010101;
+    background-color: #fff;
+    text-align: center;
+    font-size: 18px;
+    box-shadow: ;
+
+}
